methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:2: error: value ligne is not a member of Unit
  ligne(); left(); forward(); forward(); forward(); forward(); right() ligne();
                                                                       ^